# pyndev

./: .env  .env.local.example  .gitignore  .gitlab-ci.yml.example  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  justfile  pyproject.toml
docs/: README.md  container-registry-setup.md  gitlab-configuration.md  just-recipes.md  package-configuration.md  package-management.md
nso/dev/: capabilities.txt  config.xml
nso/init/: Dockerfile  aaa_init.xml  add_admin_user.xml  ncs.conf
nso/ncs_yang/: Dockerfile
nso/prod/: Dockerfile  ncs.conf
pkg_mgmt/: pyproject.toml
pkg_mgmt/src/pkg_mgmt/: add_pkg.py  cli.py  publish_pkg.py  release.py  rm_pkg.py  sync_pkg.py  toml.py  utils.py
pkg_mgmt/src/pkg_mgmt/examples/: example-template.xml.j2  example.py.j2  example.yang.j2
pkg_mgmt/src/pkg_mgmt/templates/: Dockerfile.j2  Makefile.j2  build_hook.py.j2  package-meta-data.xml.j2
